--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,3 +166,34 @@ strong {
 .btn-orange a {
   color: black !important;
 }
+
+.btn-dark,
+.btn-dark:link,
+.btn-dark:visited {
+  display: inline-block;
+
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.6rem;
+  line-height: 3.1rem;
+  text-decoration: none;
+  padding: 1.6rem 3.2rem;
+  border-radius: 0.8rem;
+  color: #ffff;
+  background-color: #141a31;
+  border: none;
+  /* Only necessary for.btn from form
+    border: none;
+    cursor: pointer;
+    font-family: inherit; */
+
+  /* trick annimation btn with CSS */
+  transition: all 0.3s;
+  /* WHAT will be animated& HOW MUICH TIME animation to happens : ALL elements for 0.3second
+    */
+}
+
+.hidden {
+  display: none;
+}
